# spell-checker

./: .gitignore  .travis.yml  Makefile  README  Readme.md  build.sh
cfg/: banner
dat/: sample-01.txt
man/: spell-check.7
src/: CMakeLists.txt  logger.c  logger.h  main.c  main.h  spell-check.c  spell-check.h  spell-checker.c  spell-checker.h  util.c  util.h
src/cfg/: banner.in  config.h.in  help.in  version.in
